crates/ridlc/tests/snapshots/corpus__typescript@veh-cluster.snap
---
source: crates/ridlc/tests/corpus.rs
expression: compiled.typescript
input_file: crates/ridlc/tests/corpus/veh-cluster/ridl.toml
---
// ===== package veh.common =====
import * as ridl_std from './ridl.std';

/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0..250 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

/**
 * Coolant / ambient temperature
 *
 * @unit Cel
 * @range [-40..125 step 0.1]
 */
export type Temperature = number & { readonly __ridl: 'veh.common.Temperature' };

export function initTemperature(): Temperature {
  return 0.0 as Temperature;
}

/**
 * Engine crankshaft speed
 *
 * @unit /min
 * @range [0..8000 step 10]
 */
export type RPM = number & { readonly __ridl: 'veh.common.RPM' };

export function initRPM(): RPM {
  return 0.0 as RPM;
}

/**
 * Normalised ratio
 *
 * @unit %
 * @range [0..100 step 0.1]
 */
export type Ratio = number & { readonly __ridl: 'veh.common.Ratio' };

export function initRatio(): Ratio {
  return 0.0 as Ratio;
}

/**
 * @range [0..65535]
 */
export type Counter = number & { readonly __ridl: 'veh.common.Counter' };

export function initCounter(): Counter {
  return 0 as Counter;
}

/**
 * @range [0..1 step 0.01]
 */
export type Gain = number & { readonly __ridl: 'veh.common.Gain' };

export function initGain(): Gain {
  return 0.0 as Gain;
}

export const MAX_SPEED = 250.0;

export const SPEED_LIMIT_EU = 130.0;

export const MAX_GEAR = 6;

export const IDLE_RPM = 800.0;

export enum GearPosition {
  PARK = 0,
  DRIVE = 1,
  REVERSE = 2,
  NEUTRAL = 3,
}

export function initGearPosition(): GearPosition {
  return GearPosition.PARK;
}

export enum Warning {
  LOW_FUEL = 0,
  CHECK_ENGINE = 1,
  DOOR_OPEN = 2,
  SEATBELT = 3,
}

export function initWarning(): Warning {
  return Warning.LOW_FUEL;
}

export type WarningFlags = number & { readonly __ridl: 'veh.common.WarningFlags' };

export const WarningFlagsBits = {
  LOW_FUEL: 1,
  CHECK_ENGINE: 2,
  DOOR_OPEN: 4,
  SEATBELT: 8,
} as const;

export function initWarningFlags(): WarningFlags {
  return 0 as WarningFlags;
}

export interface SpeedLimitPayload {
  limit: Speed;
  actual: Speed;
}

export function initSpeedLimitPayload(): SpeedLimitPayload {
  return {
    limit: initSpeed(),
    actual: initSpeed(),
  };
}

export interface DriverProfile {
  name: ridl_std.Name;
  speed: Speed;
  override?: Speed;
  /**
   * @range [0..6]
   */
  gears: number;
}

export interface SensorBounds {
  range: { min: Speed; max: Speed };
  /**
   * @bounds 8
   */
  readings: readonly Speed[];
  /**
   * @bounds 1..16
   */
  labels: readonly ridl_std.Label[];
  /**
   * @bounds 0..32
   */
  meta: ReadonlyArray<readonly [ridl_std.Label, ridl_std.Name]>;
}

export type SensorResult =
  | { kind: 'ok'; value: SensorReading }
  | { kind: 'err'; value: SensorFault };

export function initSensorResult(): SensorResult {
  return { kind: 'ok', value: initSensorReading() };
}

export interface SensorReading {
  value: Speed;
  timestamp: ridl_std.Timestamp;
}

export function initSensorReading(): SensorReading {
  return {
    value: initSpeed(),
    timestamp: ridl_std.initTimestamp(),
  };
}

export interface SensorFault {
  code: Counter;
  message: ridl_std.Message;
}

interface RawWheelFrame {
  ticks: Counter;
  frame: Uint8Array;
}


// ===== package veh.cluster =====
import * as ridl_std from './ridl.std';
import * as veh_common from './veh.common';

export interface DoorPayload {
  /**
   * @range [0..15]
   */
  sensorId: number;
  isOpen: boolean;
}

export function initDoorPayload(): DoorPayload {
  return {
    sensorId: 0,
    isOpen: false,
  };
}

export interface DiagFilter {
  /**
   * @range [0..5]
   */
  severity: number;
  category?: ridl_std.Label;
}

export function initDiagFilter(): DiagFilter {
  return {
    severity: 0,
  };
}

export interface FaultEvent {
  /**
   * @range [0..65535]
   */
  code: number;
  message: ridl_std.Message;
  timestamp: ridl_std.Timestamp;
}

export enum DiagError {
  FILTER_INVALID = 0,
  STORAGE_BUSY = 1,
  ACCESS_DENIED = 2,
}

export function initDiagError(): DiagError {
  return DiagError.FILTER_INVALID;
}

export interface FaultPage {
  /**
   * @bounds 0..64
   */
  faults: readonly FaultEvent[];
}

export function initFaultPage(): FaultPage {
  return {
    faults: [],
  };
}

/**
 * A package-private payload type, so the interaction layer's legal
 * `internal`-over-`internal` case is exercised inside one package. The
 * cross-package counterpart is impossible by construction: a foreign
 * `internal` name never resolves (typl §3.3).
 *
 * @range [0..65535]
 */
type RawTickCount = number & { readonly __ridl: 'veh.cluster.RawTickCount' };

function initRawTickCount(): RawTickCount {
  return 0 as RawTickCount;
}

/**
 * The window of raw tick counts a wheel diagnostic covers.
 */
interface RawWheelSpan {
  span: { first: RawTickCount; latest: RawTickCount };
  /**
   * @bounds 2
   */
  bursts: readonly { first: RawTickCount; latest: RawTickCount }[];
}

function initRawWheelSpan(): RawWheelSpan {
  return {
    span: { first: initRawTickCount(), latest: initRawTickCount() },
    bursts: Array.from({ length: 2 }, () => ({ first: initRawTickCount(), latest: initRawTickCount() })),
  };
}

/**
 * @range [0..7]
 */
export type FanLevel = number & { readonly __ridl: 'veh.cluster.FanLevel' };

export function initFanLevel(): FanLevel {
  return 0 as FanLevel;
}

export interface FilterState {
  /**
   * @range [0..65535]
   */
  hoursRun: number;
  clogged: boolean;
}

export function initFilterState(): FilterState {
  return {
    hoursRun: 0,
    clogged: false,
  };
}

export interface ClimateReport {
  cabin: veh_common.Temperature;
  setpoint: veh_common.Temperature;
  fan: FanLevel;
}

export function initClimateReport(): ClimateReport {
  return {
    cabin: veh_common.initTemperature(),
    setpoint: veh_common.initTemperature(),
    fan: initFanLevel(),
  };
}

export enum HvacError {
  COMPRESSOR_OFF = 0,
  SENSOR_FAULT = 1,
}

export function initHvacError(): HvacError {
  return HvacError.COMPRESSOR_OFF;
}

/**
 * A declared constant, so a contract clause can reference one. The guaranteed
 * expression subset admits constants (ridl §13) and nothing in the corpus
 * exercised that until these members were added.
 */
export const MAX_FAN = 7;

/**
 * The ceiling a fan request is clamped to.
 */
export const FAN_CEILING = 7;

/**
 * The same ceiling, one hop further along the chain.
 */
export const FAN_LIMIT = 7;

/**
 * The label a cabin fan reports itself under.
 */
export type FanTag = string & { readonly __ridl: 'veh.cluster.FanTag' };

export function initFanTag(): FanTag {
  return 'unset' as FanTag;
}

/**
 * The cabin fan's label.
 */
export const FAN_TAG = 'cabin-fan' as const;

/**
 * The same label, reached through the constant above.
 */
export const FAN_LABEL = 'cabin-fan' as const;
